# tttd

./: .gitignore  README.md  pyproject.toml
scripts/: test_erdos.py
scripts/erdos/: game.py  overlap_game.py  visualize.py
scripts/erdos/video/: erdos_video.py  scenes.md
src/tttd/: __main__.py  advantages.py  completers.py  eval.py  main.py  sampler.py
src/tttd/erdos/: __init__.py  dataset.py  env.py  executor.py  prompt.py  verifier.py
tests/: conftest.py  test_erdos.py
